force-app/main/default/objects/timeline__Timeline_Child_Object__c/fields/timeline__Date_Field__c.field-meta.xml
<CustomField>
    <fullName>timeline__Date_Field__c</fullName>
    <inlineHelpText>Field API Name that will be used to date and time part of the timeline. Created Date will be used as the default if this field isn&apos;t specified.</inlineHelpText>
    <label>Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>