force-app/main/default/objects/timeline__Timeline_Child_Object__c/fields/timeline__Object__c.field-meta.xml
<CustomField>
    <fullName>timeline__Object__c</fullName>
    <description>Child Object API Name</description>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>