force-app/main/default/objects/timeline__Timeline_Child_Object__c/fields/timeline__Object_Color__c.field-meta.xml
<CustomField>
    <fullName>timeline__Object_Color__c</fullName>
    <inlineHelpText>Theme color for the child object.</inlineHelpText>
    <label>Object Color</label>
    <length>25</length>
    <type>Text</type>
</CustomField>