force-app/main/default/objects/timeline__Timeline_Child_Object__c/fields/timeline__Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>timeline__Relationship_Name__c</fullName>
    <inlineHelpText>Name of the relationship for the child object.</inlineHelpText>
    <label>Relationship Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>