force-app/main/default/objects/timeline__Timeline_Child_Object__c/fields/timeline__Timeline_Configuration__c.field-meta.xml
<CustomField>
    <fullName>timeline__Timeline_Configuration__c</fullName>
    <label>Timeline Configuration</label>
    <referenceTo>timeline__Timeline_Configuration__c</referenceTo>
    <relationshipLabel>Timeline Child Objects</relationshipLabel>
    <relationshipName>Timeline_Child_Objects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>