force-app/main/default/objects/timeline__Timeline_Child_Object__c/validationRules/timeline__Object_Color_required_with_Icon_Image.validationRule-meta.xml
<ValidationRule>
    <fullName>timeline__Object_Color_required_with_Icon_Image</fullName>
    <active>true</active>
    <description>Object Color required with Icon Image</description>
    <errorConditionFormula>AND(LEN(timeline__Icon_Image_Url__c)&gt;0, LEN(timeline__Object_Color__c) = 0)</errorConditionFormula>
    <errorDisplayField>timeline__Object_Color__c</errorDisplayField>
    <errorMessage>Object Color required with Icon Image</errorMessage>
</ValidationRule>